Upgrade storybook to v6

--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -50,20 +50,23 @@
     "@nice-digital/nds-tabs": "^1.0.23-alpha.0",
     "@nice-digital/nds-tag": "^1.0.23-alpha.0",
     "@nice-digital/nds-textarea": "^1.0.5-alpha.0",
-    "@storybook/addon-a11y": "^5.1.11",
-    "@storybook/addon-storysource": "^5.1.11",
-    "@types/storybook__react": "^4.0.2",
     "react": "^16.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addon-viewport": "^5.1.9",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/preset-scss": "^1.0.2",
-    "@storybook/react": "^5.1.11",
+    "@storybook/addon-a11y": "^6.1.15",
+    "@storybook/addon-storysource": "^6.1.15",
+    "@storybook/source-loader": "^6.1.15",
+    "@types/storybook__react": "^5.2.1",
+    "@whitespace/storybook-addon-html": "^4.2.0",
+    "@storybook/addon-actions": "^6.1.15",
+    "@storybook/addon-knobs": "^6.1.15",
+    "@storybook/addon-links": "^6.1.15",
+    "@storybook/addon-viewport": "^6.1.15",
+    "@storybook/addons": "^6.1.15",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.1.15",
+    "@storybook/theming": "^6.1.15",
     "babel-loader": "^8.0.6"
   },
   "gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
