Re-add components to packages as deps

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
-  "packages": [
-    "components/*",
-    "packages/*"
-  ],
-  "version": "independent"
+	"command": {
+		"bootstrap": { "npmClientArgs": ["--no-package-lock"] }
+	},
+	"packages": ["components/*", "packages/*"],
+	"version": "independent"
 }
