--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -16,7 +16,8 @@
 	"files": [
 		"lib",
 		"es",
-		"scss"
+    "scss",
+    "*.d.ts"
 	],
 	"publishConfig": {
 		"registry": "https://registry.npmjs.org/",
