--- a/components/nds-textarea/package.json
+++ b/components/nds-textarea/package.json
@@ -35,12 +35,12 @@
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.23-alpha.0",
+    "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.11.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "classnames": "^2.2.6"
+    "@babel/cli": "^7.5.0"
   },
   "gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
