--- a/package.json
+++ b/package.json
@@ -1,112 +1,156 @@
 {
-  "name": "nice-design-system",
-  "private": true,
-  "version": "0.0.1",
-  "description": "Monorepo for the NICE Design System",
-  "scripts": {
-    "start": "npm run dev",
-    "dev": "concurrently npm:build:es:watch npm:devapp npm:storybook",
-    "// DEVAPP (Playground)": "",
-    "devapp": "lerna run --scope=dev-app start",
-    "// DOCUMENTATION": "",
-    "docs:dev": "lerna run --stream --scope=@nice-digital/design-system-documentation start",
-    "docs:build": "lerna run --stream --scope=@nice-digital/design-system-documentation build",
-    "docs:serve": "lerna run --stream --scope=@nice-digital/design-system-documentation serve",
-    "// STORYBOOK": "",
-    "storybook": "lerna run --stream --scope=storybook storybook",
-    "storybook:dev": "concurrently npm:build:es:watch npm:storybook",
-    "storybook:build": "lerna run --scope=storybook build-storybook",
-    "// LERNA": "",
-    "lerna": "lerna",
-    "bootstrap": "lerna bootstrap --hoist",
-    "release": "lerna publish",
-    "// TESTS": "",
-    "test": "cross-env CI=true npm run test:unit && npm run lint",
-    "test:unit": "jest",
-    "test:unit:watch": "jest --watch",
-    "// LINTING": "",
-    "lint": "npm run prettier && npm run lint:js && npm run lint:scss",
-    "lint:js": "eslint ./{packages,components}/**/*.js",
-    "lint:js:fix": "npm run lint:js -- --fix",
-    "lint:scss": "stylelint ./{packages,components}/**/*.scss",
-    "lint:scss:fix": "npm run lint:scss -- --fix",
-    "prettier": "prettier --check components/*/{src,scss,__{tests,mocks}__}/**/*.{scss,js,json} packages/**/*.{scss,js,json}",
-    "// TRANSIPLE ES6": "",
-    "prebuild:lib": "lerna exec rimraf lib",
-    "build:lib": "lerna exec --scope=@nice-digital/nds-* --parallel -- babel src -d lib --source-maps --root-mode upward",
-    "build:lib:watch": "npm run build:lib -- -w",
-    "prebuild:es": "lerna exec rimraf es",
-    "build:es": "cross-env NODE_ENV=es lerna exec --scope=@nice-digital/nds-* --parallel -- babel src -d es --source-maps --root-mode upward",
-    "build:es:watch": "npm run build:es -- -w",
-    "build:watch": "concurrently -n build: npm:build:*:watch",
-    "// LIFECYCLE": "",
-    "postinstall": "npm run bootstrap",
-    "prepublishOnly": "npm run build:lib && npm run build:es"
-  },
-  "config": {
-    "//": "Banner is used for prepending to compiled JS and CSS",
-    "banner": "NICE Design System ${ version } | ${ date }\n© Copyright NICE 2015-${ year }\nLicensed under MIT (https://github.com/nhsevidence/nice-design-system/blob/master/LICENSE)"
-  },
-  "author": "Ian Routledge <ian.routledge@nice.org.uk>",
-  "contributors": [
-    "NICE Digital Services (https://www.nice.org.uk/digital)",
-    "Ian Routledge (http://ediblecode.com)"
-  ],
-  "license": "MIT",
-  "engines": {
-    "node": ">= 8.9.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
-    "@babel/preset-env": "^7.5.0",
-    "@babel/preset-react": "^7.0.0",
-    "@nice-digital/eslint-config": "^1.0.1",
-    "@types/jest": "^24.0.17",
-    "@types/node": "^12.7.2",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.8.5",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
-    "concurrently": "^4.1.1",
-    "copyfiles": "^2.1.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
-    "lerna": "^3.20.2",
-    "node-sass": "^4.13.0",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^10.1.0",
-    "stylelint-config-prettier": "^5.2.0",
-    "stylelint-config-standard": "^18.3.0",
-    "stylelint-order": "^3.1.0",
-    "stylelint-prettier": "^1.1.1",
-    "stylelint-scss": "^3.9.0",
-    "typescript": "^3.5.3"
-  },
-  "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-flow": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.7",
-    "@nice-digital/icons": "^2.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0"
-  }
+	"name": "nice-design-system",
+	"private": true,
+	"version": "0.0.1",
+	"description": "Monorepo for the NICE Design System",
+	"scripts": {
+		"start": "npm run dev",
+		"dev": "concurrently npm:build:es:watch npm:devapp npm:storybook npm:docs:dev",
+		"// DEVAPP (Playground)": "",
+		"devapp": "lerna run --scope=dev-app start",
+		"// DOCUMENTATION": "",
+		"docs:dev": "lerna run --stream --scope=@nice-digital/design-system-documentation start",
+		"docs:build": "lerna run --stream --scope=@nice-digital/design-system-documentation build",
+		"docs:serve": "lerna run --stream --scope=@nice-digital/design-system-documentation serve",
+		"// STORYBOOK": "",
+		"storybook": "lerna run --stream --scope=storybook storybook",
+		"storybook:dev": "concurrently npm:build:es:watch npm:storybook",
+		"storybook:build": "lerna run --scope=storybook build-storybook",
+		"// LERNA": "",
+		"lerna": "lerna",
+		"bootstrap": "lerna bootstrap",
+		"release": "lerna publish",
+		"// TESTS": "",
+		"test": "cross-env CI=true npm run test:unit && npm run lint",
+		"test:unit": "jest",
+		"test:unit:watch": "jest --watch",
+		"// LINTING": "",
+		"lint": "npm run prettier && npm run lint:js && npm run lint:scss",
+		"lint:js": "eslint ./{packages,components}/**/*.js",
+		"lint:js:fix": "npm run lint:js -- --fix",
+		"lint:scss": "stylelint ./{packages,components}/**/*.scss",
+		"lint:scss:fix": "npm run lint:scss -- --fix",
+		"prettier": "prettier --check components/*/{src,scss,__{tests,mocks}__}/**/*.{scss,js,json} packages/**/*.{scss,js,json}",
+		"// TRANSIPLE ES6": "",
+		"prebuild:lib": "lerna exec rimraf lib",
+		"build:lib": "lerna exec --scope=@nice-digital/nds-* --parallel -- babel src -d lib --source-maps --root-mode upward",
+		"build:lib:watch": "npm run build:lib -- -w",
+		"prebuild:es": "lerna exec rimraf es",
+		"build:es": "cross-env NODE_ENV=es lerna exec --scope=@nice-digital/nds-* --parallel -- babel src -d es --source-maps --root-mode upward",
+		"build:es:watch": "npm run build:es -- -w",
+		"build:watch": "concurrently -n build: npm:build:*:watch",
+		"// LIFECYCLE": "",
+		"postinstall": "npm run bootstrap",
+		"prepublishOnly": "npm run build:lib && npm run build:es",
+		"// MAINTENANCE": "",
+		"nuke": "concurrently \"lerna clean --y\" \"rimraf ./node_modules\" \"rimraf package-lock.json\""
+	},
+	"config": {
+		"//": "Banner is used for prepending to compiled JS and CSS",
+		"banner": "NICE Design System ${ version } | ${ date }\n© Copyright NICE 2015-${ year }\nLicensed under MIT (https://github.com/nhsevidence/nice-design-system/blob/master/LICENSE)"
+	},
+	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
+	"contributors": [
+		"NICE Digital Services (https://www.nice.org.uk/digital)",
+		"Ian Routledge (http://ediblecode.com)"
+	],
+	"license": "MIT",
+	"engines": {
+		"node": ">= 8.9.0"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.5.0",
+		"@babel/core": "^7.5.5",
+		"@babel/plugin-transform-modules-commonjs": "^7.5.0",
+		"@babel/plugin-transform-runtime": "^7.12.10",
+		"@babel/preset-env": "^7.5.0",
+		"@babel/preset-flow": "^7.12.1",
+		"@babel/preset-react": "^7.12.10",
+		"@babel/preset-typescript": "^7.12.7",
+		"@mdx-js/mdx": "^1.5.1",
+		"@mdx-js/react": "^1.5.1",
+		"@nice-digital/eslint-config": "^1.0.1",
+		"@nice-digital/global-nav": "github:nice-digital/global-nav",
+		"@storybook/addon-a11y": "^6.1.15",
+		"@storybook/addon-actions": "^6.1.15",
+		"@storybook/addon-knobs": "^6.1.15",
+		"@storybook/addon-links": "^6.1.15",
+		"@storybook/addon-storysource": "^6.1.15",
+		"@storybook/addon-viewport": "^6.1.15",
+		"@storybook/addons": "^6.1.15",
+		"@storybook/preset-scss": "^1.0.3",
+		"@storybook/react": "^6.1.15",
+		"@storybook/source-loader": "^6.1.15",
+		"@storybook/theming": "^6.1.15",
+		"@types/classnames": "^2.2.11",
+		"@types/faker": "^4.1.5",
+		"@types/history": "^4.7.3",
+		"@types/jest": "^24.0.17",
+		"@types/node": "^12.7.2",
+		"@types/react-dom": "^16.8.5",
+		"@types/react-helmet": "^5.0.14",
+		"@types/react-router-dom": "^4.3.5",
+		"@types/react": "^16.9.2",
+		"@types/storybook__react": "^5.2.1",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
+		"@whitespace/storybook-addon-html": "^4.2.0",
+		"babel-core": "^7.0.0-bridge.0",
+		"babel-eslint": "^10.0.2",
+		"babel-jest": "^24.9.0",
+		"babel-loader": "^8.0.6",
+		"babel-preset-gatsby": "^0.11.0",
+		"classnames": "^2.2.6",
+		"concurrently": "^4.1.1",
+		"copyfiles": "^2.1.0",
+		"cross-env": "^7.0.3",
+		"css-loader": "^3.0.0",
+		"enzyme-adapter-react-16": "^1.14.0",
+		"enzyme-to-json": "^3.3.5",
+		"enzyme": "^3.10.0",
+		"eslint-config-prettier": "^6.15.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint": "^6.8.0",
+		"faker": "^4.1.0",
+		"gatsby-image": "^2.2.30",
+		"gatsby-plugin-manifest": "^2.2.25",
+		"gatsby-plugin-mdx": "^1.0.56",
+		"gatsby-plugin-offline": "^3.0.17",
+		"gatsby-plugin-react-helmet": "^3.1.13",
+		"gatsby-plugin-sass": "^2.1.20",
+		"gatsby-plugin-sharp": "^2.2.34",
+		"gatsby-plugin-typescript": "^2.1.16",
+		"gatsby-source-filesystem": "^2.1.35",
+		"gatsby-transformer-remark": "^2.12.0",
+		"gatsby-transformer-sharp": "^2.3.1",
+		"gatsby": "^2.17.6",
+		"history": "^4.9.0",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^24.8.0",
+		"lerna": "^3.20.2",
+		"lodash": "^4.17.20",
+		"node-sass": "^4.13.0",
+		"prettier": "^1.18.2",
+		"prop-types": "^15.7.2",
+		"react-dom": "^16.11.0",
+		"react-helmet": "^5.2.1",
+		"react-router-dom": "^5.0.1",
+		"react-scripts": "3.1.2",
+		"react": "^16.11.0",
+		"regenerator-runtime": "^0.13.7",
+		"rimraf": "^2.6.2",
+		"sass-loader": "^7.1.0",
+		"slugify": "^1.4.6",
+		"style-loader": "^0.23.1",
+		"stylelint-config-prettier": "^5.2.0",
+		"stylelint-config-standard": "^18.3.0",
+		"stylelint-order": "^3.1.0",
+		"stylelint-prettier": "^1.1.1",
+		"stylelint-scss": "^3.9.0",
+		"stylelint": "^10.1.0",
+		"typescript": "^3.5.3"
+	}
 }
