--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -4,15 +4,39 @@
 	"description": "Documentation for the NICE Design System",
 	"version": "1.0.27-alpha.0",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
+	"keywords": [
+		"gatsby"
+	],
 	"dependencies": {
-		"@mdx-js/mdx": "^1.5.1",
-		"@mdx-js/react": "^1.5.1",
-		"@nice-digital/global-nav": "github:nice-digital/global-nav",
-		"@types/classnames": "^2.2.11",
-		"@types/react-helmet": "^5.0.14",
-		"classnames": "^2.2.6",
-		"gatsby": "^2.17.6",
-		"gatsby-image": "^2.2.30",
+    "@nice-digital/design-system": "1.0.42-alpha.0",
+    "@nice-digital/nds-action-banner": "^1.0.23-alpha.0",
+    "@nice-digital/nds-alert": "^1.0.24-alpha.0",
+    "@nice-digital/nds-breadcrumbs": "^1.0.25-alpha.0",
+    "@nice-digital/nds-button": "^1.0.24-alpha.0",
+    "@nice-digital/nds-card": "^1.0.28-alpha.0",
+    "@nice-digital/nds-checkbox": "^1.0.28-alpha.0",
+    "@nice-digital/nds-core": "^1.0.23-alpha.0",
+    "@nice-digital/nds-filters": "^1.0.26-alpha.0",
+    "@nice-digital/nds-form-group": "^1.0.17-alpha.0",
+    "@nice-digital/nds-forms": "^1.0.29-alpha.0",
+    "@nice-digital/nds-grid": "^1.0.19-alpha.0",
+    "@nice-digital/nds-hero": "^1.0.23-alpha.0",
+    "@nice-digital/nds-in-page-nav": "^1.0.23-alpha.0",
+    "@nice-digital/nds-input": "^1.0.5-alpha.0",
+    "@nice-digital/nds-maintain-ratio": "^1.0.23-alpha.0",
+    "@nice-digital/nds-page-header": "^1.0.23-alpha.0",
+    "@nice-digital/nds-panel": "^1.0.26-alpha.0",
+    "@nice-digital/nds-phase-banner": "^1.0.23-alpha.0",
+    "@nice-digital/nds-radio": "1.0.29-alpha.0",
+    "@nice-digital/nds-simple-pagination": "^1.0.4-alpha.0",
+    "@nice-digital/nds-stacked-nav": "^1.0.27-alpha.0",
+    "@nice-digital/nds-tabs": "^1.0.23-alpha.0",
+    "@nice-digital/nds-tag": "^1.0.23-alpha.0",
+    "@nice-digital/nds-textarea": "^1.0.5-alpha.0"
+  },
+  "devDependencies":{
+    "gatsby": "^2.17.6",
+    "gatsby-image": "^2.2.30",
 		"gatsby-plugin-manifest": "^2.2.25",
 		"gatsby-plugin-mdx": "^1.0.56",
 		"gatsby-plugin-offline": "^3.0.17",
@@ -22,32 +46,19 @@
 		"gatsby-plugin-typescript": "^2.1.16",
 		"gatsby-source-filesystem": "^2.1.35",
 		"gatsby-transformer-remark": "^2.12.0",
-		"gatsby-transformer-sharp": "^2.3.1",
-		"node-sass": "^4.13.0",
-		"prop-types": "^15.7.2",
-		"react": "^16.11.0",
-		"react-dom": "^16.11.0",
-		"react-helmet": "^5.2.1"
+		"gatsby-transformer-sharp": "^2.3.1"
+  },
+	"scripts": {
+		"build": "gatsby build",
+		"develop-playground": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
+		"develop": "gatsby develop",
+		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+		"start": "gatsby clean && npm run develop",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean",
+		"test": "echo \"Error: run tests from root\" && exit 1",
+		"localtest": "jest --watch"
 	},
-	"devDependencies": {
-		"@babel/preset-react": "^7.12.10",
-		"@babel/preset-typescript": "^7.12.7",
-		"@typescript-eslint/eslint-plugin": "^4.14.1",
-		"@typescript-eslint/parser": "^4.14.1",
-		"babel-core": "^6.26.3",
-		"babel-jest": "^26.6.3",
-		"babel-preset-gatsby": "^0.11.0",
-		"cross-env": "^7.0.3",
-		"eslint": "^7.18.0",
-		"jest": "^26.6.3",
-		"lodash": "^4.17.20",
-		"prettier": "^1.18.2",
-		"regenerator-runtime": "^0.13.7",
-		"slugify": "^1.4.6"
-	},
-	"keywords": [
-		"gatsby"
-	],
 	"license": "MIT",
 	"repository": {
 		"type": "git",
