--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -18,17 +18,8 @@
     "type": "git",
     "url": "git+https://github.com/nhsevidence/nice-design-system.git"
   },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1",
-    "storybook": "start-storybook -p 6006 -s ./node_modules/@nice-digital/icons/dist/",
-    "build-storybook": "build-storybook"
-  },
-  "bugs": {
-    "url": "https://github.com/nhsevidence/nice-design-system/issues"
-  },
   "dependencies": {
-    "@nice-digital/design-system": "^1.0.42-alpha.0",
-    "@nice-digital/icons": "^2.1.1",
+    "@nice-digital/design-system": "1.0.42-alpha.0",
     "@nice-digital/nds-action-banner": "^1.0.23-alpha.0",
     "@nice-digital/nds-alert": "^1.0.24-alpha.0",
     "@nice-digital/nds-breadcrumbs": "^1.0.25-alpha.0",
@@ -36,38 +27,31 @@
     "@nice-digital/nds-card": "^1.0.28-alpha.0",
     "@nice-digital/nds-checkbox": "^1.0.28-alpha.0",
     "@nice-digital/nds-core": "^1.0.23-alpha.0",
+    "@nice-digital/nds-filters": "^1.0.26-alpha.0",
     "@nice-digital/nds-form-group": "^1.0.17-alpha.0",
     "@nice-digital/nds-forms": "^1.0.29-alpha.0",
     "@nice-digital/nds-grid": "^1.0.19-alpha.0",
     "@nice-digital/nds-hero": "^1.0.23-alpha.0",
+    "@nice-digital/nds-in-page-nav": "^1.0.23-alpha.0",
     "@nice-digital/nds-input": "^1.0.5-alpha.0",
     "@nice-digital/nds-maintain-ratio": "^1.0.23-alpha.0",
     "@nice-digital/nds-page-header": "^1.0.23-alpha.0",
     "@nice-digital/nds-panel": "^1.0.26-alpha.0",
-    "@nice-digital/nds-radio": "^1.0.29-alpha.0",
+    "@nice-digital/nds-phase-banner": "^1.0.23-alpha.0",
+    "@nice-digital/nds-radio": "1.0.29-alpha.0",
     "@nice-digital/nds-simple-pagination": "^1.0.4-alpha.0",
     "@nice-digital/nds-stacked-nav": "^1.0.27-alpha.0",
     "@nice-digital/nds-tabs": "^1.0.23-alpha.0",
     "@nice-digital/nds-tag": "^1.0.23-alpha.0",
-    "@nice-digital/nds-textarea": "^1.0.5-alpha.0",
-    "react": "^16.11.0"
+    "@nice-digital/nds-textarea": "^1.0.5-alpha.0"
   },
-  "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@storybook/addon-a11y": "^6.1.15",
-    "@storybook/addon-storysource": "^6.1.15",
-    "@storybook/source-loader": "^6.1.15",
-    "@types/storybook__react": "^5.2.1",
-    "@whitespace/storybook-addon-html": "^4.2.0",
-    "@storybook/addon-actions": "^6.1.15",
-    "@storybook/addon-knobs": "^6.1.15",
-    "@storybook/addon-links": "^6.1.15",
-    "@storybook/addon-viewport": "^6.1.15",
-    "@storybook/addons": "^6.1.15",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.1.15",
-    "@storybook/theming": "^6.1.15",
-    "babel-loader": "^8.0.6"
+  "scripts": {
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "storybook": "start-storybook -p 6006 -s ./node_modules/@nice-digital/icons/dist/",
+    "build-storybook": "build-storybook"
+  },
+  "bugs": {
+    "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
