Moved React to peer dependency

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -41,6 +41,7 @@
 		"order/properties-alphabetical-order": true
 	},
   "ignoreFiles": [
-	  "**/vendor/**/*.scss"
+	  "**/vendor/**/*.scss",
+	  "**/*.md"
   ]
 }
