--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -32,9 +32,11 @@
 	},
 	"dependencies": {
 		"@nice-digital/icons": "^2.1.1",
-		"prop-types": "^15.7.2",
-		"react": "^16.11.0"
-	},
+		"prop-types": "^15.7.2"
+  },
+  "peerDependencies": {
+    "react": "^16.11.0"
+  },
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
