--- a/components/nds-form-group/package.json
+++ b/components/nds-form-group/package.json
@@ -40,7 +40,9 @@
     "@nice-digital/nds-core": "^1.0.23-alpha.0",
     "@nice-digital/nds-forms": "^1.0.29-alpha.0",
     "classnames": "^2.2.6",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.7.2"
+  },
+  "peerDependencies": {
     "react": "^16.11.0"
   },
   "gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
