--- a/components/nds-maintain-ratio/package.json
+++ b/components/nds-maintain-ratio/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.23-alpha.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.7.2"
+  },
+  "peerDependencies": {
     "react": "^16.11.0"
   },
   "devDependencies": {
