--- a/components/nds-panel/package.json
+++ b/components/nds-panel/package.json
@@ -36,10 +36,12 @@
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
+  "peerDependencies": {
+    "react": "^16.11.0"
+  },
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.23-alpha.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.11.0"
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0"
