--- a/components/nds-radio/package.json
+++ b/components/nds-radio/package.json
@@ -35,8 +35,10 @@
 	},
 	"dependencies": {
 		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2",
-		"react": "^16.11.0"
-	},
+		"prop-types": "^15.7.2"
+  },
+  "peerDependencies": {
+    "react": "^16.11.0"
+  },
 	"gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
