--- a/components/nds-stacked-nav/package.json
+++ b/components/nds-stacked-nav/package.json
@@ -35,9 +35,11 @@
 	},
 	"dependencies": {
 		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2",
-		"react": "^16.11.0"
-	},
+		"prop-types": "^15.7.2"
+  },
+  "peerDependencies": {
+    "react": "^16.11.0"
+  },
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
