--- a/components/nds-tabs/package.json
+++ b/components/nds-tabs/package.json
@@ -32,9 +32,11 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^1.0.23-alpha.0",
-		"prop-types": "^15.7.2",
-		"react": "^16.11.0"
-	},
+		"prop-types": "^15.7.2"
+  },
+  "peerDependencies": {
+    "react": "^16.11.0"
+  },
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
