--- a/components/nds-tag/package.json
+++ b/components/nds-tag/package.json
@@ -35,9 +35,11 @@
 	},
 	"dependencies": {
     "prop-types": "^15.7.2",
-    "classnames": "^2.2.6",
-		"react": "^16.11.0"
-	},
+    "classnames": "^2.2.6"
+  },
+  "peerDependencies": {
+    "react": "^16.11.0"
+  },
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 
