--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -44,6 +44,7 @@
 		"gatsby-plugin-sass": "^2.1.20",
 		"gatsby-plugin-sharp": "^2.2.34",
 		"gatsby-plugin-typescript": "^2.1.16",
+		"gatsby-remark-autolink-headers": "^2.11.0",
 		"gatsby-source-filesystem": "^2.1.35",
 		"gatsby-transformer-remark": "^2.12.0",
 		"gatsby-transformer-sharp": "^2.3.1"
