--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"@nice-digital/global-nav": "github:nice-digital/global-nav",
 		"@storybook/addon-a11y": "^6.1.15",
 		"@storybook/addon-actions": "^6.1.15",
+		"@storybook/addon-essentials": "^6.1.18",
 		"@storybook/addon-knobs": "^6.1.15",
 		"@storybook/addon-links": "^6.1.15",
 		"@storybook/addon-storysource": "^6.1.15",
