--- a/components/nds-core/package.json
+++ b/components/nds-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-core",
-	"version": "1.0.23-alpha.0",
+	"version": "1.1.0",
 	"description": "Core code for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"contributors": [
@@ -36,10 +36,10 @@
 		"@nice-digital/icons": "^2.1.1",
 		"prop-types": "^15.7.2",
 		"sass-mq": "^5.0.0"
-  },
-  "peerDependencies": {
-    "react": "^16.11.0"
-  },
+	},
+	"peerDependencies": {
+		"react": "^16.11.0"
+	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
