--- a/components/nds-forms/package.json
+++ b/components/nds-forms/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-forms",
-	"version": "1.0.29-alpha.0",
+	"version": "1.1.0",
 	"description": "DEPRECATED! Use @nice-digital/nds-input and @nice-digital/nds-textarea",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://github.com/nhsevidence/nice-design-system#readme",
@@ -32,6 +32,6 @@
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
-  },
+	},
 	"gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
