--- a/components/nds-input/package.json
+++ b/components/nds-input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-input",
-  "version": "1.0.5-alpha.0",
+  "version": "1.1.0",
   "description": "Input component for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://nice-digital.github.io/nice-design-system/",
@@ -34,9 +34,9 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.23-alpha.0",
-    "prop-types": "^15.7.2",
-    "classnames": "^2.2.6"
+    "@nice-digital/nds-core": "^1.1.0",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0"
