--- a/components/nds-radio/package.json
+++ b/components/nds-radio/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-radio",
-	"version": "1.0.29-alpha.0",
+	"version": "1.1.0",
 	"description": "Radio button component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://github.com/nhsevidence/nice-design-system#readme",
@@ -36,9 +36,9 @@
 	"dependencies": {
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
-  },
-  "peerDependencies": {
-    "react": "^16.11.0"
-  },
+	},
+	"peerDependencies": {
+		"react": "^16.11.0"
+	},
 	"gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
