--- a/components/nds-table/package.json
+++ b/components/nds-table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-table",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "description": "Table component for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk",
@@ -34,7 +34,7 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.23-alpha.0",
+    "@nice-digital/nds-core": "^1.1.0",
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
