--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "1.0.37-alpha.0",
+  "version": "1.1.0",
   "private": true,
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
@@ -19,34 +19,34 @@
     "url": "git+https://github.com/nhsevidence/nice-design-system.git"
   },
   "dependencies": {
-    "@nice-digital/design-system": "1.0.42-alpha.0",
-    "@nice-digital/nds-action-banner": "^1.0.23-alpha.0",
-    "@nice-digital/nds-alert": "^1.0.24-alpha.0",
-    "@nice-digital/nds-breadcrumbs": "^1.0.25-alpha.0",
-    "@nice-digital/nds-button": "^1.0.24-alpha.0",
-    "@nice-digital/nds-card": "^1.0.28-alpha.0",
-    "@nice-digital/nds-checkbox": "^1.0.28-alpha.0",
-    "@nice-digital/nds-core": "^1.0.23-alpha.0",
-    "@nice-digital/nds-filters": "^1.0.26-alpha.0",
-    "@nice-digital/nds-form-group": "^1.0.17-alpha.0",
-    "@nice-digital/nds-forms": "^1.0.29-alpha.0",
-    "@nice-digital/nds-grid": "^1.0.19-alpha.0",
-    "@nice-digital/nds-hero": "^1.0.23-alpha.0",
-    "@nice-digital/nds-horizontal-nav": "^1.0.0-alpha.0",
-    "@nice-digital/nds-in-page-nav": "^1.0.23-alpha.0",
-    "@nice-digital/nds-input": "^1.0.5-alpha.0",
-    "@nice-digital/nds-maintain-ratio": "^1.0.23-alpha.0",
-    "@nice-digital/nds-page-header": "^1.0.23-alpha.0",
-    "@nice-digital/nds-panel": "^1.0.26-alpha.0",
-    "@nice-digital/nds-phase-banner": "^1.0.23-alpha.0",
-    "@nice-digital/nds-prev-next": "^1.0.0-alpha.0",
-    "@nice-digital/nds-radio": "1.0.29-alpha.0",
-    "@nice-digital/nds-simple-pagination": "^1.0.4-alpha.0",
-    "@nice-digital/nds-stacked-nav": "^1.0.27-alpha.0",
-    "@nice-digital/nds-table": "^1.0.0-alpha.0",
-    "@nice-digital/nds-tabs": "^1.0.23-alpha.0",
-    "@nice-digital/nds-tag": "^1.0.23-alpha.0",
-    "@nice-digital/nds-textarea": "^1.0.5-alpha.0"
+    "@nice-digital/design-system": "^1.1.0",
+    "@nice-digital/nds-action-banner": "^1.1.0",
+    "@nice-digital/nds-alert": "^1.1.0",
+    "@nice-digital/nds-breadcrumbs": "^1.1.0",
+    "@nice-digital/nds-button": "^1.1.0",
+    "@nice-digital/nds-card": "^1.1.0",
+    "@nice-digital/nds-checkbox": "^1.1.0",
+    "@nice-digital/nds-core": "^1.1.0",
+    "@nice-digital/nds-filters": "^1.1.0",
+    "@nice-digital/nds-form-group": "^1.1.0",
+    "@nice-digital/nds-forms": "^1.1.0",
+    "@nice-digital/nds-grid": "^1.1.0",
+    "@nice-digital/nds-hero": "^1.1.0",
+    "@nice-digital/nds-horizontal-nav": "^1.0.0",
+    "@nice-digital/nds-in-page-nav": "^1.1.0",
+    "@nice-digital/nds-input": "^1.1.0",
+    "@nice-digital/nds-maintain-ratio": "^1.1.0",
+    "@nice-digital/nds-page-header": "^1.1.0",
+    "@nice-digital/nds-panel": "^1.1.0",
+    "@nice-digital/nds-phase-banner": "^1.1.0",
+    "@nice-digital/nds-prev-next": "^1.0.0",
+    "@nice-digital/nds-radio": "^1.1.0",
+    "@nice-digital/nds-simple-pagination": "^1.1.0",
+    "@nice-digital/nds-stacked-nav": "^1.1.0",
+    "@nice-digital/nds-table": "^1.0.0",
+    "@nice-digital/nds-tabs": "^1.1.0",
+    "@nice-digital/nds-tag": "^1.1.0",
+    "@nice-digital/nds-textarea": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
