--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -36,6 +36,7 @@
     "@nice-digital/nds-alert": "^1.1.0",
     "@nice-digital/nds-breadcrumbs": "^1.1.0",
     "@nice-digital/nds-button": "^1.1.1",
+		"@nice-digital/nds-callout": "^1.0.0",
     "@nice-digital/nds-card": "^1.1.1",
     "@nice-digital/nds-checkbox": "^1.1.1",
     "@nice-digital/nds-core": "^1.1.1",
