Add build for design-system package css

--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -25,7 +25,8 @@
     "url": "git+https://github.com/nhsevidence/nice-design-system.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "build-css": "node-sass ./scss/nice-design-system.scss --importer=./../../node_modules/node-sass-tilde-importer dist/bundle.css"
   },
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
