--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.0",
   "description": "Your source for quickly creating consistent on-brand NICE digital services",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://nhsevidence.github.io/nice-design-system/",
@@ -36,20 +36,20 @@
     "@nice-digital/nds-alert": "^1.1.0",
     "@nice-digital/nds-breadcrumbs": "^1.1.0",
     "@nice-digital/nds-button": "^1.1.1",
-		"@nice-digital/nds-callout": "^1.0.0",
+    "@nice-digital/nds-callout": "^1.1.0-alpha.0",
     "@nice-digital/nds-card": "^1.1.1",
     "@nice-digital/nds-checkbox": "^1.1.1",
     "@nice-digital/nds-core": "^1.1.1",
     "@nice-digital/nds-filters": "^1.1.0",
     "@nice-digital/nds-form-group": "^1.1.1",
     "@nice-digital/nds-forms": "^1.1.0",
-    "@nice-digital/nds-grid": "^1.1.3",
+    "@nice-digital/nds-grid": "^1.2.0-alpha.0",
     "@nice-digital/nds-hero": "^1.1.2",
-    "@nice-digital/nds-horizontal-nav": "^1.0.0",
-    "@nice-digital/nds-in-page-nav": "^1.1.1",
+    "@nice-digital/nds-horizontal-nav": "^1.1.0-alpha.0",
+    "@nice-digital/nds-in-page-nav": "^1.2.0-alpha.0",
     "@nice-digital/nds-input": "^1.1.1",
     "@nice-digital/nds-maintain-ratio": "^1.1.1",
-    "@nice-digital/nds-page-header": "^1.1.1",
+    "@nice-digital/nds-page-header": "^1.2.0-alpha.0",
     "@nice-digital/nds-panel": "^1.1.1",
     "@nice-digital/nds-phase-banner": "^1.1.1",
     "@nice-digital/nds-prev-next": "^1.0.1",
