--- a/components/nds-callout/package.json
+++ b/components/nds-callout/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-callout",
-	"version": "1.0.0",
+	"version": "1.1.0-alpha.0",
 	"description": "Callout / promotional component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk",
