--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-grid",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.0",
   "description": "Grid component for the NICE Design System",
   "keywords": [
     "grid"
