NDS-152 Remove flow and redundant configs

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ packages/storybook/storybook-static
 /packages/docs/public/
 .netlify
 packages/docs/netlify.toml
+
+# From NICE icons
+components/icons/es6
+components/icons/scss
