--- a/components/icons/.babelrc
+++ b/components/icons/.babelrc
@@ -1,3 +1,3 @@
 {
-    "presets": ["@babel/preset-react", "@babel/preset-flow", "@babel/preset-env"]
+    "presets": ["@babel/preset-react", "@babel/preset-env"]
 }
