NDS-152 Icons package into monorepo & new location icon (#164)
* NDS-152 Add NICE Icons at version 2.1.7

* NDS-152 Created new location icon

* NDS-152 Remove flow and redundant configs

* Package details update

--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
 	"scripts": {
 		"start": "npm run dev",
 		"dev": "concurrently npm:build:es:watch npm:devapp npm:storybook npm:docs:dev",
+		"// ICONS": "",
+		"icons:start": "lerna run --stream --scope=@nice-digital/icons start",
+		"icons:svgr": "lerna run --stream --scope=@nice-digital/icons svgr",
+		"icons:es5ify": "lerna run --stream --scope=@nice-digital/icons es5ify",
+		"icons:webfont": "lerna run --stream --scope=@nice-digital/icons webfont",
+		"icons:test": "lerna run --stream --scope=@nice-digital/icons test",
+		"icons:readme": "lerna run --stream --scope=@nice-digital/icons readme",
+		"icons:lint": "lerna run --stream --scope=@nice-digital/icons lint",
 		"// DEVAPP (Playground)": "",
 		"devapp": "lerna run --scope=dev-app start",
 		"// DOCUMENTATION": "",
@@ -57,12 +65,17 @@
 		"node": ">= 8.9.0"
 	},
 	"devDependencies": {
+		"doctoc": "^1.4.0",
+		"grunt": "^1.0.4",
+		"grunt-webfont": "^1.7.2",
+		"load-grunt-config": "^3.0.1",
+		"@svgr/cli": "^5.1.0",
+		"@babel/node": "^7.8.4",
 		"@babel/cli": "^7.5.0",
 		"@babel/core": "^7.5.5",
 		"@babel/plugin-transform-modules-commonjs": "^7.5.0",
 		"@babel/plugin-transform-runtime": "^7.12.10",
 		"@babel/preset-env": "^7.5.0",
-		"@babel/preset-flow": "^7.12.1",
 		"@babel/preset-react": "^7.12.10",
 		"@babel/preset-typescript": "^7.12.7",
 		"@mdx-js/mdx": "^1.5.1",
