--- a/components/nds-button/package.json
+++ b/components/nds-button/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "description": "Button component for the NICE Design System",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
-  "homepage": "https://nhsevidence.github.io/nice-design-system/",
+  "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "main": "lib/Button.js",
   "module": "es/Button.js",
@@ -25,13 +25,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nhsevidence/nice-design-system.git"
+    "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
-    "url": "https://github.com/nhsevidence/nice-design-system/issues"
+    "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.1.1",
