--- a/components/nds-page-header/package.json
+++ b/components/nds-page-header/package.json
@@ -6,7 +6,7 @@
     "header"
   ],
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
-  "homepage": "https://nhsevidence.github.io/nice-design-system/",
+  "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "main": "lib/PageHeader.js",
   "module": "es/PageHeader.js",
@@ -28,13 +28,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nhsevidence/nice-design-system.git"
+    "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
-    "url": "https://github.com/nhsevidence/nice-design-system/issues"
+    "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.1.1",
