--- a/components/nds-radio/package.json
+++ b/components/nds-radio/package.json
@@ -34,6 +34,7 @@
 		"@babel/cli": "^7.5.0"
 	},
 	"dependencies": {
+		"@nice-digital/nds-core": "^1.2.1",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
