--- a/components/nds-stacked-nav/package.json
+++ b/components/nds-stacked-nav/package.json
@@ -34,6 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
+		"@nice-digital/nds-core": "^1.2.1",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
