--- a/components/nds-core/package.json
+++ b/components/nds-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-core",
-	"version": "1.2.2-alpha.0",
+	"version": "1.2.2",
 	"description": "Core code for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"contributors": [
