Add in page nav (#186)
* Add in page nav

* Fix indentation

* Add in page nav readme

* Add in page nav type defs

* In page nav fixes

* Fix whitespace

* Publish

 - @nice-digital/design-system@1.2.4-alpha.0
 - @nice-digital/nds-in-page-nav@1.2.2-alpha.0
 - @nice-digital/nds-jquery@1.2.1-alpha.0
 - dev-app@1.1.4-alpha.0
 - @nice-digital/design-system-documentation@1.2.4-alpha.0
 - storybook@1.2.4-alpha.0

* Publish

 - @nice-digital/design-system@1.2.6-alpha.0
 - @nice-digital/icons@2.2.3-alpha.0
 - @nice-digital/nds-action-banner@1.2.4-alpha.0
 - @nice-digital/nds-alert@1.2.3-alpha.0
 - @nice-digital/nds-breadcrumbs@1.2.4-alpha.0
 - @nice-digital/nds-button@1.2.4-alpha.0
 - @nice-digital/nds-callout@1.1.4-alpha.0
 - @nice-digital/nds-card@1.2.4-alpha.0
 - @nice-digital/nds-checkbox@1.2.4-alpha.0
 - @nice-digital/nds-core@1.2.4-alpha.0
 - @nice-digital/nds-filters@1.2.4-alpha.0
 - @nice-digital/nds-form-group@1.2.4-alpha.0
 - @nice-digital/nds-forms@1.2.2-alpha.0
 - @nice-digital/nds-full-bleed@1.1.4-alpha.0
 - @nice-digital/nds-grid@1.2.4-alpha.0
 - @nice-digital/nds-hero@1.2.4-alpha.0
 - @nice-digital/nds-horizontal-nav@1.1.3-alpha.0
 - @nice-digital/nds-in-page-nav@1.2.4-alpha.0
 - @nice-digital/nds-input@1.2.4-alpha.0
 - @nice-digital/nds-jquery@1.2.2-alpha.0
 - @nice-digital/nds-maintain-ratio@1.2.4-alpha.0
 - @nice-digital/nds-page-header@1.2.4-alpha.0
 - @nice-digital/nds-panel@1.2.5-alpha.0
 - @nice-digital/nds-phase-banner@1.2.4-alpha.0
 - @nice-digital/nds-prev-next@1.1.4-alpha.0
 - @nice-digital/nds-radio@1.2.3-alpha.0
 - @nice-digital/nds-simple-pagination@1.2.4-alpha.0
 - @nice-digital/nds-stacked-nav@1.2.4-alpha.0
 - @nice-digital/nds-table@1.1.6-alpha.0
 - @nice-digital/nds-tabs@1.2.4-alpha.0
 - @nice-digital/nds-tag@1.2.3-alpha.0
 - @nice-digital/nds-textarea@1.2.4-alpha.0
 - dev-app@1.1.6-alpha.0
 - @nice-digital/design-system-documentation@1.2.6-alpha.0
 - storybook@1.2.6-alpha.0

* Remo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"editor.formatOnSave": true,
 	"editor.rulers": [80],
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"prettier.endOfLine": "lf",
 	"files.eol": "\n",
 	"css.validate": false,
