--- a/components/nds-in-page-nav/package.json
+++ b/components/nds-in-page-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-in-page-nav",
-  "version": "1.2.3",
+  "version": "1.2.4-alpha.2",
   "description": "In page navigation component for the NICE Design System",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk/",
@@ -8,6 +8,7 @@
   "main": "lib/InPageNav.js",
   "module": "es/InPageNav.js",
   "style": "scss/in-page-nav.scss",
+  "types": "in-page-nav.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -15,7 +16,8 @@
   "files": [
     "lib",
     "es",
-    "scss"
+    "scss",
+    "*.d.ts"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
@@ -32,8 +34,10 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.2.3",
-    "prop-types": "^15.7.2"
+    "@nice-digital/nds-core": "^1.2.4-alpha.0",
+    "lodash.throttle": "^4.1.1",
+    "prop-types": "^15.7.2",
+    "slugify": "^1.5.0"
   },
   "peerDependencies": {
     "react": "^16.11.0"
