Downgrade slugify to 1.4.7 for IE11 support
1.4.8+ uses string.normalize which isn't supported in IE11
And although there's a unorm polyfill, it's massive

--- a/components/nds-in-page-nav/package.json
+++ b/components/nds-in-page-nav/package.json
@@ -37,7 +37,7 @@
     "@nice-digital/nds-core": "^1.2.4",
     "lodash.throttle": "^4.1.1",
     "prop-types": "^15.7.2",
-    "slugify": "^1.5.0"
+    "slugify": "1.4.7"
   },
   "peerDependencies": {
     "react": "^16.11.0"
