--- a/components/nds-breadcrumbs/package.json
+++ b/components/nds-breadcrumbs/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-breadcrumbs",
-	"version": "1.2.5",
+	"version": "1.2.6-alpha.0",
 	"description": "Breadcrumbs component for the NICE Design System",
 	"keywords": [
 		"breadcrumbs"
