--- a/components/nds-callout/package.json
+++ b/components/nds-callout/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-callout",
-	"version": "1.1.5",
+	"version": "1.1.6-alpha.0",
 	"description": "Callout / promotional component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk",
@@ -35,7 +35,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^1.2.5",
-		"@nice-digital/nds-maintain-ratio": "^1.2.5",
+		"@nice-digital/nds-maintain-ratio": "^1.2.6-alpha.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
