--- a/components/nds-card/package.json
+++ b/components/nds-card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-card",
-  "version": "1.2.7",
+  "version": "1.2.8-alpha.0",
   "description": "Card component for the NICE Design System",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk/",
