--- a/components/nds-container/package.json
+++ b/components/nds-container/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-container",
-  "version": "1.0.1",
+  "version": "1.0.2-alpha.0",
   "description": "Container component for the NICE Design System",
   "keywords": [
     "container"
