--- a/components/nds-form-group/package.json
+++ b/components/nds-form-group/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-form-group",
-  "version": "1.2.5",
+  "version": "1.2.6-alpha.0",
   "description": "Form group component for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://github.com/nice-digital/nice-design-system#readme",
