--- a/components/nds-full-bleed/package.json
+++ b/components/nds-full-bleed/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-full-bleed",
-  "version": "1.1.5",
+  "version": "1.1.6-alpha.0",
   "description": "Full bleed (edge-to-edge) component for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk",
