--- a/components/nds-horizontal-nav/package.json
+++ b/components/nds-horizontal-nav/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-horizontal-nav",
-	"version": "1.1.4",
+	"version": "1.1.5-alpha.0",
 	"description": "Horizontal navigation component for the NICE Design System",
 	"keywords": [
 		"navigation"
