--- a/components/nds-panel/package.json
+++ b/components/nds-panel/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-panel",
-	"version": "1.2.6",
+	"version": "1.2.7-alpha.0",
 	"description": "Panel component for the NICE Design System",
 	"keywords": [
 		"panel"
