--- a/components/nds-simple-pagination/package.json
+++ b/components/nds-simple-pagination/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-simple-pagination",
-  "version": "1.2.5",
+  "version": "1.2.6-alpha.0",
   "description": "Simple pagination component for the NICE Design System",
   "author": "Warren Keith <w@rren.dev>",
   "keywords": [
