--- a/components/nds-stacked-nav/package.json
+++ b/components/nds-stacked-nav/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-stacked-nav",
-	"version": "1.2.5",
+	"version": "1.2.6-alpha.0",
 	"description": "Stacked navigation component for the NICE Design System",
 	"keywords": [
 		"navigation"
