--- a/components/nds-textarea/package.json
+++ b/components/nds-textarea/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-textarea",
-  "version": "1.2.5",
+  "version": "1.2.6-alpha.0",
   "description": "Textarea component for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://nice-digital.github.io/nice-design-system/",
