--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "@nice-digital/nds-grid",
-  "version": "1.2.6",
-  "description": "Grid component for the NICE Design System",
-  "keywords": [
-    "grid"
-  ],
-  "author": "Ian Routledge <ian.routledge@nice.org.uk>",
-  "homepage": "https://design-system.nice.org.uk/",
-  "license": "MIT",
-  "main": "lib/Grid.js",
-  "module": "es/Grid.js",
-  "style": "scss/grid.scss",
-  "types": "nds-grid.d.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib",
-    "es",
-    "scss",
-    "*.d.ts"
-  ],
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nice-digital/nice-design-system.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "bugs": {
-    "url": "https://github.com/nice-digital/nice-design-system/issues"
-  },
-  "dependencies": {
-    "@nice-digital/nds-core": "^1.2.5",
-    "classnames": "^2.2.6",
-    "prop-types": "^15.7.2"
-  },
-  "peerDependencies": {
-    "react": "^16.11.0"
-  }
+	"name": "@nice-digital/nds-grid",
+	"version": "1.2.6",
+	"description": "Grid component for the NICE Design System",
+	"keywords": [
+		"grid"
+	],
+	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
+	"homepage": "https://design-system.nice.org.uk/",
+	"license": "MIT",
+	"main": "lib/Grid.js",
+	"module": "es/Grid.js",
+	"style": "scss/grid.scss",
+	"types": "nds-grid.d.ts",
+	"directories": {
+		"lib": "lib",
+		"test": "__tests__"
+	},
+	"files": [
+		"lib",
+		"es",
+		"scss",
+		"*.d.ts"
+	],
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org/",
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nice-digital/nice-design-system.git"
+	},
+	"scripts": {
+		"test": "echo \"Error: run tests from root\" && exit 1"
+	},
+	"bugs": {
+		"url": "https://github.com/nice-digital/nice-design-system/issues"
+	},
+	"dependencies": {
+		"@nice-digital/nds-core": "^1.2.5",
+		"classnames": "^2.2.6",
+		"prop-types": "^15.7.2"
+	},
+	"peerDependencies": {
+		"react": "^16 || ^17"
+	}
 }
