--- a/components/nds-radio/package.json
+++ b/components/nds-radio/package.json
@@ -39,7 +39,8 @@
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
-		"react": "^16.11.0"
+		"react": "^16 || ^17",
+		"react-dom": "^16 || ^17"
 	},
 	"gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
