--- a/components/icons/examples/simple-express/package.json
+++ b/components/icons/examples/simple-express/package.json
@@ -12,6 +12,6 @@
   "devDependencies": {
     "@nice-digital/icons": "^1.1.0",
     "express": "^4.16.1",
-    "node-sass": "^4.5.3"
+    "sass": "^1.35.2"
   }
 }
