--- a/package.json
+++ b/package.json
@@ -146,8 +146,6 @@
 		"lerna": "^3.20.2",
 		"load-grunt-config": "^3.0.1",
 		"lodash": "^4.17.20",
-		"node-sass": "^4.13.0",
-		"node-sass-tilde-importer": "^1.0.2",
 		"prettier": "^1.18.2",
 		"prop-types": "^15.7.2",
 		"react": "^16.11.0",
@@ -158,6 +156,7 @@
 		"react-scripts": "3.1.2",
 		"regenerator-runtime": "^0.13.7",
 		"rimraf": "^2.6.2",
+		"sass": "^1.35.2",
 		"sass-loader": "^7.1.0",
 		"slugify": "^1.4.6",
 		"style-loader": "^0.23.1",
@@ -168,5 +167,8 @@
 		"stylelint-prettier": "^1.1.1",
 		"stylelint-scss": "^3.9.0",
 		"typescript": "^3.5.3"
+	},
+	"dependencies": {
+		"sass-mq": "^5.0.1"
 	}
 }
