--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"@nice-digital/icons": "^2.2.5-alpha.0",
 		"@nice-digital/nds-core": "^1.2.8-alpha.0",
+		"classnames": "^2.3.1",
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
