Filter prop investigation (#227)
* delete array of computed properties to avoid DOM pollution

* investigating population of dynamic property and value via functions

* refactoring navigation method property setting logic

* move const variable assignment for ElementType to prevent undefined

* set ElementType const with a function instead of ternary

* add prop validation function to highlight missing/invalid properties

* add type='button' to stop element acting as a submit inside a form

* change sorting and activeFilters length check to > 0 to prevent display when length is zero

* update readme to reflect that fallback is default behaviour on filterPanel when js is not available

* add defineElementType and populateFilterProperty methods to ResultsSorting. Remove console logging lines

* update jest config to fix issues with tests not running

* Added lerna clean shortcut

* Added lerna clean shortcut

* Jest config update

* NDS-175 Remove extraneous props from DOM

* NDS-175 Remove erroneous props

Co-authored-by: John Davey <john.davey@nice.org.uk>

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"bootstrap": "lerna bootstrap",
 		"bootstrap:prod": "lerna bootstrap --no-ci",
 		"release": "lerna publish",
+		"lerna:clean": "lerna clean -y",
 		"// TESTS": "",
 		"test": "cross-env CI=true npm run test:unit && npm run lint",
 		"test:unit": "jest",
