Nds 000 clean main latest (#228)
* NDS-000 Clean main latest

* Publish

 - @nice-digital/design-system@1.2.17
 - @nice-digital/icons@2.2.5
 - @nice-digital/nds-action-banner@1.2.9
 - @nice-digital/nds-alert@1.2.8
 - @nice-digital/nds-breadcrumbs@1.2.9
 - @nice-digital/nds-button@1.2.8
 - @nice-digital/nds-callout@1.1.9
 - @nice-digital/nds-card@1.2.10
 - @nice-digital/nds-checkbox@1.2.8
 - @nice-digital/nds-container@1.0.4
 - @nice-digital/nds-core@1.2.8
 - @nice-digital/nds-filters@1.2.9
 - @nice-digital/nds-form-group@1.2.8
 - @nice-digital/nds-forms@1.2.4
 - @nice-digital/nds-full-bleed@1.1.8
 - @nice-digital/nds-grid@1.2.9
 - @nice-digital/nds-hero@1.2.8
 - @nice-digital/nds-horizontal-nav@1.1.8
 - @nice-digital/nds-in-page-nav@1.2.11
 - @nice-digital/nds-input@1.2.8
 - @nice-digital/nds-jquery@1.2.4
 - @nice-digital/nds-maintain-ratio@1.2.8
 - @nice-digital/nds-page-header@1.2.8
 - @nice-digital/nds-panel@1.2.10
 - @nice-digital/nds-phase-banner@1.2.8
 - @nice-digital/nds-prev-next@1.1.9
 - @nice-digital/nds-radio@1.2.8
 - @nice-digital/nds-simple-pagination@1.2.8
 - @nice-digital/nds-stacked-nav@1.2.9
 - @nice-digital/nds-table@1.1.10
 - @nice-digital/nds-tabs@1.2.10
 - @nice-digital/nds-tag@1.2.8
 - @nice-digital/nds-textarea@1.2.8
 - dev-app@1.1.17
 - @nice-digital/design-system-documentation@1.2.17
 - storybook@1.2.17

* Version bumps

--- a/components/nds-callout/package.json
+++ b/components/nds-callout/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-callout",
-	"version": "1.1.9-alpha.0",
+	"version": "1.1.9",
 	"description": "Callout / promotional component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk",
@@ -34,8 +34,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.8-alpha.0",
-		"@nice-digital/nds-maintain-ratio": "^1.2.8-alpha.0",
+		"@nice-digital/nds-core": "^1.2.8",
+		"@nice-digital/nds-maintain-ratio": "^1.2.8",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
@@ -46,5 +46,5 @@
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
 }
