--- a/components/icons/package.json
+++ b/components/icons/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/icons",
-	"version": "2.2.5-alpha.0",
+	"version": "2.2.5",
 	"description": "Icons for use in NICE Digital Services",
 	"main": "index.js",
 	"scripts": {
@@ -52,5 +52,5 @@
 		"node": ">= 10.0.0",
 		"npm": ">= 6.8.0"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
 }
