--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "1.2.9-alpha.0",
+	"version": "1.2.9",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
@@ -34,8 +34,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^2.2.5-alpha.0",
-		"@nice-digital/nds-core": "^1.2.8-alpha.0",
+		"@nice-digital/icons": "^2.2.5",
+		"@nice-digital/nds-core": "^1.2.8",
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
@@ -45,5 +45,5 @@
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
 }
