--- a/components/nds-core/package.json
+++ b/components/nds-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-core",
-	"version": "1.2.8-alpha.0",
+	"version": "1.2.8",
 	"description": "Core code for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"contributors": [
@@ -33,7 +33,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^2.2.5-alpha.0",
+		"@nice-digital/icons": "^2.2.5",
 		"prop-types": "^15.7.2",
 		"sass-mq": "^5.0.0"
 	},
@@ -44,5 +44,5 @@
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
 }
