--- a/components/nds-in-page-nav/package.json
+++ b/components/nds-in-page-nav/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-in-page-nav",
-	"version": "1.2.11-alpha.0",
+	"version": "1.2.11",
 	"description": "In page navigation component for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.8-alpha.0",
+		"@nice-digital/nds-core": "^1.2.8",
 		"lodash.throttle": "^4.1.1",
 		"prop-types": "^15.7.2",
 		"slugify": "1.4.7"
@@ -46,5 +46,5 @@
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
 }
