--- a/components/nds-input/package.json
+++ b/components/nds-input/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-input",
-	"version": "1.2.8-alpha.0",
+	"version": "1.2.8",
 	"description": "Input component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://nice-digital.github.io/nice-design-system/",
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.8-alpha.0",
+		"@nice-digital/nds-core": "^1.2.8",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
@@ -45,5 +45,5 @@
 		"react": "^16 || ^17",
 		"react-dom": "^16 || ^17"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
 }
