--- a/components/nds-jquery/package.json
+++ b/components/nds-jquery/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-jquery",
-  "version": "1.2.4-alpha.0",
+  "version": "1.2.4",
   "description": "JQuery utils for implementing the NICE Design System",
   "keywords": [
     "jquery"
@@ -34,5 +34,5 @@
   "devDependencies": {
     "@babel/cli": "^7.5.0"
   },
-  "gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+  "gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
 }
