--- a/components/nds-prev-next/package.json
+++ b/components/nds-prev-next/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-prev-next",
-	"version": "1.1.9-alpha.0",
+	"version": "1.1.9",
 	"description": "Previous and next navigation component for the NICE Design System",
 	"author": "Warren Keith <w@rren.dev>",
 	"keywords": [
@@ -38,7 +38,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.8-alpha.0",
+		"@nice-digital/nds-core": "^1.2.8",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
@@ -49,5 +49,5 @@
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
 }
