NDS-175 Filters component (#229)
* NDS-175 Filter summary basis

* Basic Summary

* Update readme to include lerna bootstrap step

* Filter input component

* Filters typing amends

* NDS-175 Filter input styling

* NDS-175 Input filter

* NDS-175 Filter form fallback

* NDS-175 Documentation

* NDS-175 Start on tests

* Debugging test

* NDS-175 Updates to readme and types

* NDS-175 Filter tests

* NDS-175 Filter summary

* NDS-175 Filter summary

* NDS-175 Filter summary tests

* NDS-175 Refactor tests and fix elementtype issue

* NDS-175 Updated readme with filter summary changes

* NDS-175 Add onChange test

* NDS-175 Separated and fixed filtergroup tests

* NDS-175 Form tests

Co-authored-by: w@rren <w@rren.dev>

* NDS-175 Linting prop types

* NDS-175 Updates

* NDS-175 Add storybook

Co-authored-by: w@rren <w@rren.dev>

* NDS-175 Documentation wip

* NDS-175 Gatsby eslint issue override

* NDS-175 Documentation

* NDS-175 WIP heading levels

* NDS-175 Added headingLevel props

* NDS-175 Added onChange typescript defs

* NDS-175 Heading level test

* NDS-175 Fix build remove unassigned name prop

* Publish

 - @nice-digital/design-system@1.2.18-alpha.0
 - @nice-digital/icons@2.2.6-alpha.0
 - @nice-digital/nds-action-banner@1.2.10-alpha.0
 - @nice-digital/nds-alert@1.2.9-alpha.0
 - @nice-digital/nds-breadcrumbs@1.2.10-alpha.0
 - @nice-digital/nds-button@1.2.9-alpha.0
 - @nice-digital/nds-callout@1.1.10-alpha.0
 - @nice-digital/nds-card@1.2.11-alpha.0
 - @nice-digital/nds-checkbox@1.2.9-alpha.0
 - @nice-digital/nds-container@1.0.5-alpha.0
 - @nice-digital/nds-core@1.2.9-alpha.0
 - @nice-digital/nds-filters@1.2.10-alpha.0
 - @nice-digital/nds-form-group@1.2.9-alpha.0
 - @nice-digital/nds-forms@1.2.5-alpha.0
 - @nice-digital/nds-full-bleed@1.1.9-alpha.0
 - @nice-digital/nds-grid@1.2.10-alpha.0
 - @nice-digital/nds-hero@1.2.9-alpha.0
 - @nice-digital/nds-horizontal-nav@1.1.9-alp

--- a/components/nds-hero/package.json
+++ b/components/nds-hero/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-hero",
-	"version": "1.2.8",
+	"version": "1.2.10-alpha.0",
 	"description": "Hero component for the NICE Design System",
 	"keywords": [
 		"hero"
@@ -37,7 +37,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.8",
+		"@nice-digital/nds-core": "^1.2.10-alpha.0",
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
@@ -47,5 +47,5 @@
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
-	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
+	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
 }
