--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"icons:lint": "lerna run --stream --scope=@nice-digital/icons lint",
 		"// DEVAPP (Playground)": "",
 		"devapp": "lerna run --scope=dev-app start",
+		"devapp:dev": "concurrently npm:devapp npm:build:es:watch",
 		"// DOCUMENTATION": "",
 		"docs:dev": "lerna run --stream --scope=@nice-digital/design-system-documentation start",
 		"docs:build": "lerna run --stream --scope=@nice-digital/design-system-documentation build",
@@ -29,6 +30,7 @@
 		"bootstrap": "lerna bootstrap",
 		"bootstrap:prod": "lerna bootstrap --no-ci",
 		"release": "lerna publish",
+		"lerna:clean": "lerna clean -y",
 		"// TESTS": "",
 		"test": "cross-env CI=true npm run test:unit && npm run lint",
 		"test:unit": "jest",
@@ -142,7 +144,7 @@
 		"grunt-webfont": "^1.7.2",
 		"history": "^4.9.0",
 		"identity-obj-proxy": "^3.0.0",
-		"jest": "^24.8.0",
+		"jest": "^27.0.6",
 		"lerna": "^3.20.2",
 		"load-grunt-config": "^3.0.1",
 		"lodash": "^4.17.20",
