--- a/components/nds-panel/package.json
+++ b/components/nds-panel/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-panel",
-	"version": "1.2.10",
+	"version": "1.2.12-alpha.0",
 	"description": "Panel component for the NICE Design System",
 	"keywords": [
 		"panel"
@@ -41,12 +41,12 @@
 		"react-dom": "^16 || ^17"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.8",
+		"@nice-digital/nds-core": "^1.2.10-alpha.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
-	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
+	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
 }
