--- a/components/nds-tag/package.json
+++ b/components/nds-tag/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-tag",
-	"version": "1.2.8",
+	"version": "1.2.10-alpha.0",
 	"description": "Tag component for the NICE Design System",
 	"keywords": [
 		"tag"
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.8",
+		"@nice-digital/nds-core": "^1.2.10-alpha.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
@@ -45,5 +45,5 @@
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
 	},
-	"gitHead": "b56a3c7ffb41ed4bb3b0b2132d0fc918bfcd9465"
+	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
 }
