--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "1.2.17",
+  "version": "1.2.24-alpha.0",
   "private": true,
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
@@ -19,37 +19,37 @@
     "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "dependencies": {
-    "@nice-digital/design-system": "^1.2.17",
-    "@nice-digital/nds-action-banner": "^1.2.9",
-    "@nice-digital/nds-alert": "^1.2.8",
-    "@nice-digital/nds-breadcrumbs": "^1.2.9",
-    "@nice-digital/nds-button": "^1.2.8",
-    "@nice-digital/nds-callout": "^1.1.9",
-    "@nice-digital/nds-card": "^1.2.10",
-    "@nice-digital/nds-checkbox": "^1.2.8",
-    "@nice-digital/nds-container": "^1.0.4",
-    "@nice-digital/nds-core": "^1.2.8",
-    "@nice-digital/nds-filters": "^1.2.9",
-    "@nice-digital/nds-form-group": "^1.2.8",
-    "@nice-digital/nds-forms": "^1.2.4",
-    "@nice-digital/nds-full-bleed": "^1.1.8",
-    "@nice-digital/nds-grid": "^1.2.9",
-    "@nice-digital/nds-hero": "^1.2.8",
-    "@nice-digital/nds-horizontal-nav": "^1.1.8",
-    "@nice-digital/nds-in-page-nav": "^1.2.11",
-    "@nice-digital/nds-input": "^1.2.8",
-    "@nice-digital/nds-maintain-ratio": "^1.2.8",
-    "@nice-digital/nds-page-header": "^1.2.8",
-    "@nice-digital/nds-panel": "^1.2.10",
-    "@nice-digital/nds-phase-banner": "^1.2.8",
-    "@nice-digital/nds-prev-next": "^1.1.9",
-    "@nice-digital/nds-radio": "^1.2.8",
-    "@nice-digital/nds-simple-pagination": "^1.2.8",
-    "@nice-digital/nds-stacked-nav": "^1.2.9",
-    "@nice-digital/nds-table": "^1.1.10",
-    "@nice-digital/nds-tabs": "^1.2.10",
-    "@nice-digital/nds-tag": "^1.2.8",
-    "@nice-digital/nds-textarea": "^1.2.8"
+    "@nice-digital/design-system": "^1.2.24-alpha.0",
+    "@nice-digital/nds-action-banner": "^1.2.11-alpha.0",
+    "@nice-digital/nds-alert": "^1.2.10-alpha.0",
+    "@nice-digital/nds-breadcrumbs": "^1.2.11-alpha.0",
+    "@nice-digital/nds-button": "^1.2.10-alpha.0",
+    "@nice-digital/nds-callout": "^1.1.11-alpha.0",
+    "@nice-digital/nds-card": "^1.2.12-alpha.0",
+    "@nice-digital/nds-checkbox": "^1.2.10-alpha.0",
+    "@nice-digital/nds-container": "^1.0.6-alpha.0",
+    "@nice-digital/nds-core": "^1.2.10-alpha.0",
+    "@nice-digital/nds-filters": "^1.2.16-alpha.0",
+    "@nice-digital/nds-form-group": "^1.2.10-alpha.0",
+    "@nice-digital/nds-forms": "^1.2.5-alpha.0",
+    "@nice-digital/nds-full-bleed": "^1.1.10-alpha.0",
+    "@nice-digital/nds-grid": "^1.2.11-alpha.0",
+    "@nice-digital/nds-hero": "^1.2.10-alpha.0",
+    "@nice-digital/nds-horizontal-nav": "^1.1.10-alpha.0",
+    "@nice-digital/nds-in-page-nav": "^1.2.13-alpha.0",
+    "@nice-digital/nds-input": "^1.2.12-alpha.0",
+    "@nice-digital/nds-maintain-ratio": "^1.2.10-alpha.0",
+    "@nice-digital/nds-page-header": "^1.2.10-alpha.0",
+    "@nice-digital/nds-panel": "^1.2.12-alpha.0",
+    "@nice-digital/nds-phase-banner": "^1.2.10-alpha.0",
+    "@nice-digital/nds-prev-next": "^1.1.11-alpha.0",
+    "@nice-digital/nds-radio": "^1.2.10-alpha.0",
+    "@nice-digital/nds-simple-pagination": "^1.2.10-alpha.0",
+    "@nice-digital/nds-stacked-nav": "^1.2.11-alpha.0",
+    "@nice-digital/nds-table": "^1.1.12-alpha.0",
+    "@nice-digital/nds-tabs": "^1.2.13-alpha.0",
+    "@nice-digital/nds-tag": "^1.2.10-alpha.0",
+    "@nice-digital/nds-textarea": "^1.2.10-alpha.0"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
