Add explicit release and alpha tag publish commands

--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
 		"lerna": "lerna",
 		"bootstrap": "lerna bootstrap",
 		"bootstrap:prod": "lerna bootstrap --no-ci",
-		"release": "lerna publish",
 		"lerna:clean": "lerna clean -y",
+    "release:alpha": "lerna publish --dist-tag alpha",
+    "release:latest": "lerna publish --dist-tag latest",
 		"// TESTS": "",
 		"test": "cross-env CI=true npm run test:unit && npm run lint",
 		"test:unit": "jest",
