--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,19 +2,19 @@
 	"name": "@nice-digital/design-system-documentation",
 	"private": true,
 	"description": "Documentation for the NICE Design System",
-	"version": "1.2.31-alpha.0",
+	"version": "1.2.31",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"keywords": [
 		"gatsby"
 	],
 	"dependencies": {
-		"@nice-digital/design-system": "^1.2.31-alpha.0",
+		"@nice-digital/design-system": "^1.2.31",
 		"@nice-digital/nds-action-banner": "^1.2.13",
 		"@nice-digital/nds-alert": "^1.2.11",
 		"@nice-digital/nds-breadcrumbs": "^1.2.13",
 		"@nice-digital/nds-button": "^1.2.11",
 		"@nice-digital/nds-callout": "^1.1.13",
-		"@nice-digital/nds-card": "^1.2.14-alpha.0",
+		"@nice-digital/nds-card": "^1.2.14",
 		"@nice-digital/nds-checkbox": "^1.2.11",
 		"@nice-digital/nds-container": "^1.0.7",
 		"@nice-digital/nds-core": "^1.2.11",
@@ -36,7 +36,7 @@
 		"@nice-digital/nds-simple-pagination": "^1.2.11",
 		"@nice-digital/nds-stacked-nav": "^1.2.12",
 		"@nice-digital/nds-table": "^1.1.14",
-		"@nice-digital/nds-tabs": "^1.2.16-alpha.0",
+		"@nice-digital/nds-tabs": "^1.2.16",
 		"@nice-digital/nds-tag": "^1.2.11",
 		"@nice-digital/nds-textarea": "^1.2.11"
 	},
