--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "1.2.31-alpha.0",
+  "version": "1.2.31",
   "private": true,
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
@@ -19,13 +19,13 @@
     "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "dependencies": {
-    "@nice-digital/design-system": "^1.2.31-alpha.0",
+    "@nice-digital/design-system": "^1.2.31",
     "@nice-digital/nds-action-banner": "^1.2.13",
     "@nice-digital/nds-alert": "^1.2.11",
     "@nice-digital/nds-breadcrumbs": "^1.2.13",
     "@nice-digital/nds-button": "^1.2.11",
     "@nice-digital/nds-callout": "^1.1.13",
-    "@nice-digital/nds-card": "^1.2.14-alpha.0",
+    "@nice-digital/nds-card": "^1.2.14",
     "@nice-digital/nds-checkbox": "^1.2.11",
     "@nice-digital/nds-container": "^1.0.7",
     "@nice-digital/nds-core": "^1.2.11",
@@ -48,7 +48,7 @@
     "@nice-digital/nds-simple-pagination": "^1.2.11",
     "@nice-digital/nds-stacked-nav": "^1.2.12",
     "@nice-digital/nds-table": "^1.1.14",
-    "@nice-digital/nds-tabs": "^1.2.16-alpha.0",
+    "@nice-digital/nds-tabs": "^1.2.16",
     "@nice-digital/nds-tag": "^1.2.11",
     "@nice-digital/nds-textarea": "^1.2.11"
   },
